Modify header for mobile

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             painful times. </p>
         <p>With that being said, the Black Student Union and 18 other clubs at the Texas Academy of Mathematics and
             Science have decided to host a raffle to raise money for various organizations that focus on investing in
-            African-Americans and their communities. <a href="https://docs.google.com/spreadsheets/d/1YGohSjtdaqrwj5oDrLwrzW2u10tOxsy54FL3XRx2KYM/edit?usp=sharing">View clubs, organizations, and prizes.</a></p>
+            African-Americans and their communities. View clubs, organizations, and prizes <a target="_blank" href="https://docs.google.com/spreadsheets/d/1YGohSjtdaqrwj5oDrLwrzW2u10tOxsy54FL3XRx2KYM/edit?usp=sharing">here.</a></p>
 
             <p>*100% of proceeds will be donated to the respective organization.*</p>
 
